deploy/kubernetes/webhook/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: policy-agent
  labels:
    app: policy-agent
    control-plane: webhook-server
